Fix score animation on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ div.round-info {
 span.score {
 	font-variation-settings: "slnt" -10;
 	font-size: 1.4rem;
+	/* this is min-width! */
 	@media screen and (min-width: 769px) {
 		position: absolute;
 		right: 16%;
@@ -73,7 +74,10 @@ span.score {
 
 .score-increment {
 	color: rgb(15, 222, 70);
-	transform: translateY(-32px);
+	/* this is min-width! */
+	@media screen and (min-width: 768px) {
+		transform: translateY(-32px);
+	}
 }
 
 /* Artist Cards */
